--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   height: 80px;
   display: flex;
   flex-wrap: wrap;
-  background-color: magenta;
+  background-color: yellow;
   margin-left: 50px;
 }
 
